Allow correct spacing between consecutive fieldset
Fixes #1081

--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -134,6 +134,10 @@
       padding: .9375rem 1.25rem;
     }
 
+    & + & {
+      @include default-vertical-spacing;
+    }
+
     h3 {
       border-bottom: 1px dotted $color-mid-dark;
       padding-bottom: .625rem;
